--- a/GSKC.Web/Content/bootstrap.css
+++ b/GSKC.Web/Content/bootstrap.css
@@ -5931,7 +5931,8 @@ button.close {
   float: left !important;
 }
 .hide {
-  display: none !important;
+  display: none;
+  /*display: none !important;*/
 }
 .show {
   display: block !important;
